Update in appendix

--- a/report/text/testCases.tex
+++ b/report/text/testCases.tex
@@ -407,7 +407,7 @@ The first cases are both using the website and the controller after that it is p
 		\begin{itemize}
 			\item The Arduino running the final software version.
 			\item Tag connected to a user with enough points and permission to use the media.
-			\item Access to the \fixme{stuff that controls permissions.}
+			\item Access to the website MOM
 			\item A serial connection to the Arduino.
 			\item Web Browser with link to Status API for the media being used.
 		\end{itemize}}
@@ -421,7 +421,7 @@ The first cases are both using the website and the controller after that it is p
 			\item Turn on the Arduino. (Wait for Serial to confirm that the device is running.)
 			\item Swipe tag  over RFID antenna and observe if the LED turns on.
 			\item Confirm on the web browser that the media is still marked status:GREEN for running.
-			\item Use the Web Service to rescind permission to the media.
+			\item Use the Web Site to revoke permission to the media.
 			\item Use browser to confirm that the media is marked as status:RED.
 			\item Wait and confirm that the status has run with the Serial Watch and note if its Status:RED.
 			\item Confirm that the LED turns off.
