--- a/report/text/ControllerDesign.tex
+++ b/report/text/ControllerDesign.tex
@@ -2,7 +2,7 @@
 \label{chap:controller}
 This chapter is focused on the controller system of the Media-Online Management system. The controller system is the hand and mouth of the MOM system. Handling the everyday use of the MOM system as activating and restricting usage of media devices.\newline
 %This chapter is focused on the controller of the Media-Online Management system. The controller consist of a tag reader and power control device which is discussed in this chapter but when mentioning controller both is implied. \newline
-The design and functionality of the prototype controller will be presented in parallel to the designed end product. Meaning we will explain how an optimal solution would look as well as the compromises this project had to reduce to.\newline
+The design and functionality of the prototype controller will be presented in parallel to the designed end product. Meaning that it will be explained how an optimal solution would look as well as the compromises this project had to reduce to.\newline
 
 \section{Product Design}
 
