--- a/report/text/requirementsOfMom.tex
+++ b/report/text/requirementsOfMom.tex
@@ -1,7 +1,7 @@
 \chapter{Requirements of MOM}
 \label{chap:RequirMOM}
 
-In the analysis we came to the conclusion that the following items is necessary for MOM: 
+In the analysis it was concluded that the following items is necessary for MOM: 
 \begin{itemize}
 	\item A device to toggle the power of an electronic media
 	\item An individual key for each child that can be read by the device
