--- a/report/text/websiteImplementationAndDesign.tex
+++ b/report/text/websiteImplementationAndDesign.tex
@@ -28,7 +28,7 @@ However it has not currently implemented this way of validation, but it would be
 \\
 \textbf{Users - User Details} is for viewing details about a user. It is also used to change information about a user, however it is only possible to change information, if your user is of a manager-role, or if you are the owner of that profile.\\
 \\
-\textbf{Users - Create User} is as the name suggests, used for creating a user. The system has been made ready for children to login to the system already now. We do not have any feature that requires the children to log in to the system as of yet, but a feature might utilize this later on.\\
+\textbf{Users - Create User} is as the name suggests, used for creating a user. The system has been made ready for children to login to the system already now. There is not any feature that requires the children to log in to the system as of yet, but a feature might utilize this later on.\\
 \\
 \textbf{Users - Chores} is used to get an overview of available chores, and for easy rewarding of already created chores. When a chore is done, the parent should go to this site, and simply select a child and press a button to give them the assigned reward of the chore.\\
 Chores will also have a subsite for creating chores.\\
@@ -36,7 +36,7 @@ Chores will also have a subsite for creating chores.\\
 \textbf{Users - Rules} is where parents can get an overview of rules and create them for their system. Great care has been taken to help users in creating rules, by making a step by step procedure. Starting with making the user choose what sort of action they want to achieve and thereafter choose the sort of condition they want to set, since actions only match certain conditions. This should limit some of the confusion about the rules. For more information about rules, actions and conditions see subsection \vref{sec:rule}.\\
 \\
 \textbf{Users - Permissions} is designed for an easier way to think of rules, in relation to what devices which child is allowed to use.\\
-We decided to create this permissions page, because permissions is an essential part of even the smallest of systems, you can create a system without rules, but not without permissions.\\ %This tool gives the parents an easy way to limit their child’s usage, by deciding devices can not be turned on after a certain time.\\
+It was decided to create this permissions page, because permissions is an essential part of even the smallest of systems, you can create a system without rules, but not without permissions.\\ %This tool gives the parents an easy way to limit their child’s usage, by deciding devices can not be turned on after a certain time.\\
 \\
 \textbf{Graf} page is intended for viewing statistics, such as how much have a controller been active, how is a users usage of media divided and so forth.\\
 \\
