--- a/report/kilder.bib
+++ b/report/kilder.bib
@@ -135,6 +135,13 @@ howpublished = {Website},
 year = {December 2013},
 note ={\url{http://arduino.cc/}}
 }
+@MISC{softlib,
+author = {arduino},
+title = {SoftwareSerial Library},
+howpublished = {Website},
+year = {December 2013},
+note ={http://arduino.cc/en/Reference/SoftwareSerial}}
+}
 
 @MISC{slimFramework,
 author = {Slim Framework},
