--- a/report/text/test.tex
+++ b/report/text/test.tex
@@ -1,5 +1,5 @@
 \chapter{Testing of MOM}
-There are different ways to evaluate the web interface e.g. an expert or user-based evaluation could be made. A user-based evaluation would be preferred because this gives a valuable input from a person who might use the system. A user-based evaluation with a family using the MOM system for a week or two before a interview session would be optimal. Also a log for our benefit could be made during this time to see how they use it of course with the test persons permission. However, to make a sufficient user evaluation are several families of parents with children which is between 4-12 years old to be found. Through multiple contact attempts was this not possible to find. Test of the MOM therefore executing an expert evaluation called Heuristic evaluation. 
+There are different ways to evaluate the web interface e.g. an expert or user-based evaluation could be made. A user-based evaluation would be preferred because this gives a valuable input from a person who might use the system. A user-based evaluation with a family using the MOM system for a week or two before an interview session would be optimal. Also a log for our benefit could be made during this time to see how they use it, of course with the test persons permission. However, to make a sufficient user evaluation several families of parents with children which is between 4-12 years old needs to be found. Through multiple contact attempts this proved impossible to find. Test of the MOM is therefore done by an expert evaluation called Heuristic evaluation. 
 
 \section{Heuristic evaluation in Theory}
 In a Heuristic evaluation the test persons look for errors and potential usability errors which can be categorized in 12 item and divided into 3 groups\citep{DIEB}, which is shortly described below:
