ingen fixme og text update

--- a/report/text/test.tex
+++ b/report/text/test.tex
@@ -1,7 +1,7 @@
 \chapter{Testing of MOM}
 There are different ways to evaluate the web interface e.g. an expert or user-based evaluation could be made. A user-based evaluation would be preferred because this gives a valuable input from a person who might use the system. A user-based evaluation with a family using the MOM system for a week or two before an interview session would be optimal. Also a log for our benefit could be made during this time to see how they use it, of course with the test persons permission. However, to make a sufficient user evaluation several families of parents with children which is between 4-12 years old needs to be found. Through multiple contact attempts this proved impossible to find. Test of the MOM is therefore done by an expert evaluation called Heuristic evaluation. 
 
-\section{Heuristic evaluation in Theory}
+\section{Heuristic Evaluation in Theory}
 In a Heuristic evaluation the test persons look for errors and potential usability errors which can be categorized in 12 item and divided into 3 groups\citep{DIEB}, which is shortly described below:
 \begin{description}
 \item[Learnability] make it easy for the user to learn and remember the system:
@@ -32,21 +32,22 @@ In a Heuristic evaluation the test persons look for errors and potential usabili
 Typically the test is done by 1-3 test persons\citep{HeuristicEvaluation}. The test person should be a usability expert or a software developer with the expertise in a relevant system. To make the test they should have relevant information of the user and a set of tasks to follow but they are also allowed to make their own.
 
 
-\section{Heuristic Evaluation of Media-Online Management}
+\section{Heuristic Evaluation of Media Online Management}
 Before performing a Heuristic evaluation shall there be determined, what is needed, before the evaluation is done, and how the results should be presented\citep{HeuristicEvaluationGuide}.
 
 \subsection{Planning the Evaluation}
 When planing the evaluation some test persons are needed. They need to get a small description of the user and some test cases. They should also get a list of the heuristics from which the system need to be evaluated from. This should all be made prior to the evaluation. \\
 
-The evaluation of Media-online Management system is being done by test persons in the group which have been highly involved in the development of the system. This is not optimal in this test where the test persons should be an usability expert from outside the development group\citep{DIEB}.\\
+The evaluation of Media Online Management system is being done by test persons in the group which have been highly involved in the development of the system. This is not optimal in this test where the test persons should be an usability expert from outside the development group\citep{DIEB}.\\
 
 The test persons also need to know the user. So the test persons need a general description of the user and their technology capabilities. The users of MOM are parents and children. The children is only in contact with the controller and the parents are both using the controller and the website. The parents has a general experience with the internet, but they are not experts. However it is expected they are able to at least set up an e-mail account with Google or Hotmail. The children has fewer technology skills but is expected at the target group be able to turn on a television. \\
 
 Before the test is conducted some test cases should be made by the development team. This should cover several cases in the system such that the test persons is presented to every aspect of the system. The test cases of MOM can be found in section \vref{sec:testcase}.\\ 
 
 
-We want to primarily be validated on Visibility, Consistency, Control and Feedback which we find to be the more important for the Media online Management system.
-\fixme{Større forklaring hvorfor lige disse område er vigtigst at blive valideret. samt fjern we}
+Media Online Management system should primarily be validated on Visibility, Consistency, Control and Feedback which is the more important Heuristic for this system. Visibility has been chosen since the user know should know what the system is capable of doing. Consistency is important because inconsistency can cause much irritation for the user. The user should be able to control the system via the website such that it is able to control the use of the media, this is a Control issue. Feedback to the user is important to the user such that they know something is happening in the system, when e.g. a tag is swiped. 
+
+
 
 \subsection{Presenting the Results}
 When presenting the results from the test cases it will be separated in two parts. First the errors and irregularities of the program is presented. Then the Heuristic errors will be presented.\\
@@ -64,8 +65,7 @@ This ranking can then help priorities and identify the problems that should be c
 %testcases
 \section{Testcases}
 \label{sec:testcase}
-\fixme{Referance bliver ikke fundet.}
-Shown in \autoref{tab:testcase} is one of the test cases that was made for testing the entire Media-Online Management. In the test case both a part of the Website and a controller are tested. The changes being done in the web site should affect the controller.\\ 
+Shown in the table below is one of the test cases that was made for testing the entire Media Online Management. In the test case both a part of the Website and a controller are tested. The changes being done in the web site should affect the controller.\\ 
  All test cases can be found in appendix \vref{appen:testSuite}.
 \begin{table}[h]
 	\centering
