Titleblad og synopsis

--- a/report/layout/titelblad.tex
+++ b/report/layout/titelblad.tex
@@ -53,9 +53,9 @@ Hua Lu
 \end{description}
 }
 \begin{description}
-\item {\bf Circulation:} 7
+\item {\bf Circulation:} 8
 \item {\bf Page count:} \pageref{LastPage}
-\item {\bf Appendix count and type:} 0
+\item {\bf Appendix count and type:} 4, Rules first design, Light Table, RFID Output, Test Suite
 \item {\bf Finished on} December 20$^{th}$ 2013
 \end{description}
 \vfill } &
