--- a/report/text/synopsis.tex
+++ b/report/text/synopsis.tex
@@ -1,1 +1,5 @@
-Synopsis goes here...
+This report documents the development of a system which aims to decrease children's media consumption. 
+The report is developed by a 7th semester Software engineering group.
+The system consists of a website for setting up the system, a database to store the settings, an Arduino with an RFID reader to identify users and restrict usage of media, and a daemon to automate point giving.
+A combination of different programming languages was used both for the front- and back-end, a list can be found in the end of the report.
+The prototype has been completed and is close to a state, valid for real life testing.
